<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ResumeMaker</string>
    <string name="txtWelcomeResumeText">Welcome To Resume Maker</string>
    <string name="action_settings">Settings</string>
    <string name="enteryourname">Enter Your Name</string>
    <string name="btnCreateProfile">NEXT</string>
    <string name="title_activity_splash_screen">&#160;Splash Screen</string>
    <string name="title_activity_photo_upload">&#160;Photo Upload</string>
    <string name="title_activity_personal_detail">&#160;Personal Detail</string>
    <string name="title_activity_career_objective">&#160;Career Objective</string>
    <string name="title_activity_education">&#160;Education</string>
    <string name="title_activity_education_detail">&#160;Education Detail</string>
    <string name="title_activity_project_detail">&#160;Project Detail</string>
    <string name="title_activity_experience_detail">&#160;Experience Detail</string>
    <string name="title_activity_achievement_detail">&#160;Achievement Detail</string>
    <string name="title_activity_reference_detail">&#160;Reference Detail</string>
    <string name="title_activity_signature">&#160;Signature</string>
    <string name="preview">&#160;Preview</string>
    <string name="title_activity_skill">&#160;Skill</string>
    <string name="txtAddyourPhoto">Upload Your Photo</string>
    <string name="chkSkip">Skip</string>
    <string name="objective">&#160;Career Objective</string>
    <string name="summary">Career Summary</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="personal">Personal</string>
    <string name="personaldetail">&#160;Personal Detail</string>
    <string name="name">Enter Name</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="bdate">Date Of Birth :</string>
    <string name="address">Enter Address</string>
    <string name="calendar">Calendar</string>
    <string name="language">Language Known</string>
    <string name="contact">Contact</string>
    <string name="email">Email Id</string>
    <string name="education">Education</string>
    <string name="career">Career</string>
    <string name="degree">Degree/Course</string>
    <string name="college">College/School</string>
    <string name="university">University/Board</string>
    <string name="result">Result</string>
    <string name="year">Year</string>
    <string name="skill">&#160;Skill</string>
    <string name="enterskill">Enter Only One Skill</string>
    <string name="project">Project</string>
    <string name="nameofachievement">Name Of Achievement</string>
    <string name="yearofachievement">Year Of Achievement</string>
    <string name="whatyouhaveachieved">What You Have Achieved</string>
    <string name="generate">Generate</string>
    <string name="external_dir">GetSignature</string>
    <string name="obj">Objective</string>
    <string name="percentage">Percentage</string>
    <string name="cgpa">CGPA</string>
    <string name="title_activity_tips">Tips</string>
    <string name="title_activity_tip">Tip</string>
    <string name="title_activity_career_tips">CareerTips</string>
    <string name="addachievement">ADD ACHIEVEMENT</string>
	<string name="addeducation">ADD EDUCATION</string>
	<string name="addexperience">ADD EXPERIENCE</string>
	<string name="createnewprofile">Create New Profile</string>
	<string name="listofrecords">List of Records</string>
	<string name="addproject">ADD PROJECT</string>
	<string name="addreference">ADD REFERENCE</string>
	<string name="clear">Clear</string>
	<string name="addskill">ADD SKILL</string>
	<string name="send">Send</string>
	<string name="attachment">Attachment</string>
	<string name="expertise">Expertise</string>
	<string name="subject">Subject</string>
	<string name="message">Message</string>
	<string name="emailaddress">Email Address</string>
	<string name="projecttitle">Project Title</string>
	<string name="duration">Duration</string>
	<string name="role">Role</string>
	<string name="teamsize">Team Size</string>
	<string name="company">Company</string>
	<string name="position">Position</string>
	<string name="period">Period</string>
	<string name="city">City</string>
	<string name="referencename">Reference Name</string>
	<string name="referencedesignation">Reference Designation</string>
	<string name="referencecontact">Reference Contact</string>
	<string name="referenceemail">Reference Email</string>
	<string name="place">Place</string>
	<string name="date">Date</string>
	<string name="yoursincerely">Your Sincerely</string>
</resources>