<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_converted" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
         >

        <TextView
            android:id="@+id/txtWelcomeResumeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txtWelcomeResumeText"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/edtProfileName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/txtWelcomeResumeText"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/textinputborder"
            android:hint="@string/enteryourname"
            android:singleLine="true"
            android:textColor="#000000"
            android:textColorHint="#808080" />

        <Button
            android:id="@+id/btnCreateProfile"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_below="@id/edtProfileName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonstyle"
            android:gravity="center"
            android:text="@string/btnCreateProfile"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

</ScrollView>