<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <TextView
            android:id="@+id/txtem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/neg_email"
            android:gravity="center"
            android:text="  Email"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_address_id"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_below="@id/txtem"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/textinputborder"
            android:hint="@string/emailaddress"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:textColorHint="#808080" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/et_subject_id"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/et_address_id"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/textinputborder"
            android:hint="@string/subject"
            android:textColor="#000000"
            android:textColorHint="#808080" />

        <EditText
            android:id="@+id/et_message_id"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/bt_attach_id"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/textinputborder"
            android:gravity="top"
            android:hint="@string/message"
            android:inputType="textMultiLine"
            android:paddingTop="10dp"
            android:textColor="#000000"
            android:textColorHint="#808080" />

        <Button
            android:id="@+id/bt_send_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_message_id"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonstyle"
            android:text="@string/send" />

        <Button
            android:id="@+id/bt_attach_id"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/et_subject_id"
            android:layout_below="@+id/et_subject_id"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/buttonstyle"
            android:text="@string/attachment" />

        <TextView
            android:id="@+id/tv_attach_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/bt_attach_id"
            android:layout_alignBottom="@+id/bt_attach_id"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/bt_attach_id"
            android:text=""
            android:textColor="#000000"
            android:textColorHint="#808080"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>

</ScrollView>